--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "start": "node server.cjs",
+    "start": "npm install && node server.cjs",
     "lint": "eslint .",
     "preview": "vite preview",
     "server": "node server.js",
-    "install:clean": "npm install --legacy-peer-deps"
   },
   "engines": {
     "node": ">=18.0.0",
