--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "start": "npm install && node server.cjs",
+    "start": "npm install && pip3 install -r requirements.txt && node server.cjs",
     "lint": "eslint .",
     "preview": "vite preview",
     "server": "node server.js"
